--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "require": {
-      "php": "^7.4 || ^8.0"
-    }
+  "require": {
+    "php": "^7.4 || ^8.0",
+    "phpmailer/phpmailer": "^6.5"
   }
-  
+}
